--- a/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
+++ b/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\estacionamento.Domain.Core\estacionamento.Domain.Core.csproj" />
+    <ProjectReference Include="..\estacionamento.Domain\estacionamento.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
