--- a/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
+++ b/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\estacionamento.Application\estacionamento.Application.csproj" />
     <ProjectReference Include="..\estacionamento.Domain.Core\estacionamento.Domain.Core.csproj" />
     <ProjectReference Include="..\estacionamento.Domain\estacionamento.Domain.csproj" />
   </ItemGroup>
