--- a/estacionamento.Application/estacionamento.Application.csproj
+++ b/estacionamento.Application/estacionamento.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\estacionamento.Domain.Core\estacionamento.Domain.Core.csproj" />
     <ProjectReference Include="..\estacionamento.Domain.Services\estacionamento.Domain.Services.csproj" />
     <ProjectReference Include="..\estacionamento.Domain\estacionamento.Domain.csproj" />
