--- a/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
+++ b/estacionamento.Infrastructure/estacionamento.Infrastructure.csproj
@@ -5,8 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="5.2.0" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
   </ItemGroup>
 
@@ -14,6 +12,10 @@
     <ProjectReference Include="..\estacionamento.Application\estacionamento.Application.csproj" />
     <ProjectReference Include="..\estacionamento.Domain.Core\estacionamento.Domain.Core.csproj" />
     <ProjectReference Include="..\estacionamento.Domain\estacionamento.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CrossCuting\" />
   </ItemGroup>
 
 </Project>
