--- a/estacionamento.Domain.Core/estacionamento.Domain.Core.csproj
+++ b/estacionamento.Domain.Core/estacionamento.Domain.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\estacionamento.Domain\estacionamento.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
