--- a/estacionamento.Api.Test/estacionamento.Api.Test.csproj
+++ b/estacionamento.Api.Test/estacionamento.Api.Test.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\estacionamento.Api\estacionamento.Api.csproj" />
+    <ProjectReference Include="..\estacionamento.Domain.Core\estacionamento.Domain.Core.csproj" />
+    <ProjectReference Include="..\estacionamento.Domain.Services\estacionamento.Domain.Services.csproj" />
   </ItemGroup>
 
 </Project>
